syntax = "proto3";

package ecommerce ;



message ProductID{
	string value = 1;
}

message Product{
	string id = 1;
	string name = 2;
	string description = 3;
	float price = 4;
}


service ProductInfo {
	rpc AddProduct(Product) returns (ProductID);

	rpc GetProduct(ProductID) returns   (Product);

}
